SERVER-39187 Signal coordinator's decision promise when the coordinator is canceled before beginning commit